Theme scrollbars in webkit browsers.  At least partially satisfies issue #824.

--- a/client/assets/themes/cli/style.css
+++ b/client/assets/themes/cli/style.css
@@ -468,3 +468,9 @@
     border-left: solid 4px #df6b26;
     color: #6d6d6d;
 }
+
+#kiwi ::-webkit-scrollbar { width: 9px; }
+#kiwi ::-webkit-scrollbar-track { background-color:rgba(70,70,70,1); }
+#kiwi ::-webkit-scrollbar-thumb { background-color: rgba(215,215,215,0.4); }
+#kiwi ::-webkit-scrollbar-thumb:hover { background-color: rgba(215,215,215,0.5); }
+#kiwi ::-webkit-scrollbar-thumb:active { background-color: rgba(215,215,215,0.6); }
