--- a/client/assets/themes/mini/style.css
+++ b/client/assets/themes/mini/style.css
@@ -423,3 +423,35 @@
     border-left: solid 4px #76bd2b;
     color: #555;
 }
+
+#kiwi ::-webkit-scrollbar {
+    height: 9px;
+    width: 9px;
+}
+#kiwi ::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
+#kiwi ::-webkit-scrollbar-corner { background-color:transparent; }
+#kiwi ::-webkit-scrollbar-track { background-clip:padding-box; }
+#kiwi ::-webkit-scrollbar-track:hover {
+    background-color: rgba(0,0,0,0.05);
+    -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.10);
+}
+#kiwi ::-webkit-scrollbar-track:active {
+    background-color: rgba(0,0,0,0.05);
+    -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.14), inset -1px -1px 0 rgba(0,0,0,0.07);
+}
+#kiwi ::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0,0.2);
+    -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10), inset 0 -1px 0 rgba(0,0,0,0.07);
+}
+#kiwi ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0,0,0,0.4);
+    -webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.25);
+}
+#kiwi ::-webkit-scrollbar-thumb:active {
+    background-color: rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 1px 1px 3px rgba(0,0,0,0.35);
+}
